# FrappeRSS

./: .pre-commit-config.yaml  PRIVACY.md  README.md  TERMS.md  pyproject.toml  requirements.txt
rssfeeds/: hooks.py  install.py  tasks.py
rssfeeds/rss_feeds/dashboard_chart/day_wise_feeds/: day_wise_feeds.json
rssfeeds/rss_feeds/doctype/ai_provider_profile/: ai_provider_profile.js  ai_provider_profile.json  ai_provider_profile.py  test_ai_provider_profile.py
rssfeeds/rss_feeds/doctype/article_action_alert/: article_action_alert.js  article_action_alert.json  article_action_alert.py  test_article_action_alert.py
rssfeeds/rss_feeds/doctype/article_action_alert_webhook/: article_action_alert_webhook.json  article_action_alert_webhook.py
rssfeeds/rss_feeds/doctype/frapperss_documentation/: frapperss_documentation.js  frapperss_documentation.json  frapperss_documentation.py  test_frapperss_documentation.py
rssfeeds/rss_feeds/doctype/google_chat_webhook/: google_chat_webhook.js  google_chat_webhook.json  google_chat_webhook.py  test_google_chat_webhook.py
rssfeeds/rss_feeds/doctype/rss_app_settings/: rss_app_settings.js  rss_app_settings.json  rss_app_settings.py  test_rss_app_settings.py
rssfeeds/rss_feeds/doctype/rss_feed_article/: rss_feed_article.js  rss_feed_article.json  rss_feed_article.py  test_rss_feed_article.py
rssfeeds/rss_feeds/doctype/rss_feed_source/: rss_feed_source.js  rss_feed_source.json  rss_feed_source.py  test_rss_feed_source.py
rssfeeds/rss_feeds/doctype/rss_feed_source_webhook/: rss_feed_source_webhook.json  rss_feed_source_webhook.py
(+8 files in other folders)
