[project]
name = "rssfeeds"
authors = [
    { name = "Prasad Gondala", email = "gondalaprasad@gmail.com"}
]
description = "A custom Frappe app to manage and aggregate RSS feeds."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # RSS & Web Scraping
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.2",
    # PDF & OCR Processing
    "PyMuPDF>=1.23.8",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    # AI Intelligence
    "litellm>=1.0.0"
]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.frappecloud]
categories = ["Automation", "Integrations", "Communication"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904", "E101",
    "E402", "E501", "E741", "F401", "F403",
    "F405", "F722", "W191"
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true